[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["Teoh Han Hui <teohhanhui@gmail.com>"]
edition = "2024"
rust-version = "1.85.1"
description = "Civ VI inspired game"
repository = "https://github.com/teohhanhui/hexciv"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bevy = { version = "0.16.1", default-features = false }
bevy_ecs_tilemap = { version = "0.16.0", default-features = false }
bevy_matchbox = { version = "0.12.0", default-features = false }
bevy_pancam = { version = "0.18.0", default-features = false }
bevy_simple_text_input = { version = "0.11.1", default-features = false }
bitvec = { version = "1.0.1", default-features = false }
bon = { version = "3.6.3", default-features = false }
derive_more = { version = "2.0.1", default-features = false }
fastlem = { version = "0.1.4", default-features = false }
fastlem-random-terrain = { path = "crates/fastlem-random-terrain", default-features = false }
fastrand = { version = "2.3.0", default-features = false }
fastrand-contrib = { version = "0.1.0", default-features = false }
indexmap = { version = "2.9.0", default-features = false }
itertools = { version = "0.14.0", default-features = false }
leafwing-input-manager = { version = "0.17.0", default-features = false }
log = { version = "0.4.27", default-features = false }
noise = { version = "0.9.0", default-features = false }
num_enum = { version = "0.7.3", default-features = false }
ordered-float = { version = "5.0.0", default-features = false }
pathfinding = { version = "4.14.0", default-features = false }
serde = { version = "1.0.219", default-features = false }
serde_json = { version = "1.0.140", default-features = false }
strum = { version = "0.27.1", default-features = false }
terrain-graph = { version = "1.0.1", default-features = false }
tracing = { version = "0.1.41", default-features = false }
uuid = { version = "1.17.0", default-features = false }

[workspace.lints.clippy]
arithmetic_side_effects = "warn"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
