[package]
name = "hexciv"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
default-run = "hexciv"

[dependencies]
# bevy = [dependencies.bevy]
bevy_cosmic_edit = { workspace = true, features = [] }
bevy_ecs_tilemap = { workspace = true, features = ["render", "serde"] }
bevy_matchbox = { workspace = true, features = [] }
bevy_pancam = { workspace = true, features = [] }
bitvec = { workspace = true, features = ["std"] }
bon = { workspace = true, features = ["std"] }
derive_more = { workspace = true, features = ["display", "std"] }
fastlem-random-terrain = { workspace = true, features = [] }
fastrand = { workspace = true, features = ["js", "std"] }
fastrand-contrib = { workspace = true, features = ["std"] }
indexmap = { workspace = true, features = ["std"] }
itertools = { workspace = true, features = ["use_std"] }
leafwing-input-manager = { workspace = true, features = ["asset", "keyboard", "mouse", "ui"] }
log = { workspace = true, features = ["max_level_debug", "release_max_level_warn"] }
num_enum = { workspace = true, features = ["std"] }
ordered-float = { workspace = true, features = ["serde", "std"] }
pathfinding = { workspace = true, features = [] }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true, features = ["std"] }
strum = { workspace = true, features = ["derive", "std"] }
tracing = { workspace = true, features = ["max_level_debug", "release_max_level_warn"] }
uuid = { workspace = true, features = ["serde", "v4"] }

[dependencies.bevy]
workspace = true
features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_render",
    "bevy_scene",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "multi_threaded",
    "png",
    "sysinfo_plugin",
    "wayland",
    "webgl2",
    "x11",
]

[features]
default = ["dev"]
dev = ["bevy/bevy_dev_tools", "bevy/dynamic_linking"]
