[package]
name = "hexciv"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
default-run = "hexciv"

[dependencies]
# bevy = [dependencies.bevy]
bevy_ecs_tilemap = { workspace = true, features = ["render", "serde"] }
bevy_matchbox = { workspace = true, features = [] }
bevy_pancam = { workspace = true, features = [] }
bevy_simple_text_input = { workspace = true, features = [] }
bitvec = { workspace = true, features = ["std"] }
bon = { workspace = true, features = ["std"] }
derive_more = { workspace = true, features = ["display", "std"] }
fastlem-random-terrain = { workspace = true, features = [] }
fastrand = { workspace = true, features = ["js", "std"] }
fastrand-contrib = { workspace = true, features = ["std"] }
indexmap = { workspace = true, features = ["std"] }
itertools = { workspace = true, features = ["use_std"] }
leafwing-input-manager = { workspace = true, features = ["asset", "keyboard", "mouse", "ui"] }
log = { workspace = true, features = ["max_level_debug", "release_max_level_warn"] }
num_enum = { workspace = true, features = ["std"] }
ordered-float = { workspace = true, features = ["serde", "std"] }
pathfinding = { workspace = true, features = [] }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true, features = ["std"] }
strum = { workspace = true, features = ["derive", "std"] }
tracing = { workspace = true, features = ["max_level_debug", "release_max_level_warn"] }
uuid = { workspace = true, features = ["serde", "std", "v4", "v7"] }

[dependencies.bevy]
workspace = true
features = [
    "async_executor",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_render",
    "bevy_scene",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "multi_threaded",
    "png",
    "std",
    "sysinfo_plugin",
    "wayland",
    "webgl2",
    "x11",
]

[dependencies.getrandom_v02]
package = "getrandom"
version = "0.2.15"
default-features = false
features = ["js"]

[dependencies.getrandom_v03]
package = "getrandom"
version = "0.3.2"
default-features = false
features = ["wasm_js"]

[features]
default = ["dev"]
dev = ["bevy/bevy_dev_tools", "bevy/dynamic_linking"]
